Code quality refactor v3